--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,42 @@
 @import "tailwindcss";
 
+@theme {
+  --color-gold-50: #fdfcf7;
+  --color-gold-100: #f8f3e6;
+  --color-gold-200: #ead9a8;
+  --color-gold-300: #dfc177;
+  --color-gold-400: #d4af37;
+  --color-gold-500: #c19528;
+  --color-gold-600: #a07420;
+  --color-gold-700: #7f5a1c;
+  --color-gold-800: #5e4316;
+  --color-gold-900: #3d2b0e;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --gold-50: #fdfcf7;
+  --gold-100: #f8f3e6;
+  --gold-200: #ead9a8;
+  --gold-300: #dfc177;
+  --gold-400: #d4af37;
+  --gold-500: #c19528;
+  --gold-600: #a07420;
+  --gold-700: #7f5a1c;
+  --gold-800: #5e4316;
+  --gold-900: #3d2b0e;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+
+::-webkit-scrollbar-track {
+  background: #000000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+::-webkit-scrollbar-thumb {
+  background: var(--gold-400);
+  border-radius: 5px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+::-webkit-scrollbar-thumb:hover {
+  background: var(--gold-300);
 }
